fix #802 ignore certain warnings from elegant, also improved error message layout to avoid html bleed-over

--- a/sirepo/package_data/static/css/sirepo.css
+++ b/sirepo/package_data/static/css/sirepo.css
@@ -761,6 +761,11 @@ li.sr-model-list-item > a {
   /* normal spacing */
   padding-left: 1.7em;
 }
+.elegant-error-box {
+  white-space: pre-wrap;
+  overflow: auto;
+  max-height: 180px;
+}
 .hellweg-icon {
   -moz-user-select: none;
   -webkit-user-select: none;
